Replace all *.png images with *.webp images (half-size)

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width">
 
 	<title>Download FileBot</title>
-	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="icon" href="favicon.webp" sizes="16x16 32x32" type="image/webp">
+	<link rel="icon" href="favicon.svg" sizes="48x48 192x192" type="image/svg+xml">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 
@@ -64,7 +65,7 @@
 			</div>
 
 			<div class="section download">
-				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
+				<img class="icon light" src="images/package.webp" alt="download" width="48" height="48" />
 				<h2>FileBot for all POSIX platforms</h2>
 				<ul class="list">
 					<li>POSIX portable package: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a></li>
@@ -79,7 +80,7 @@
 			</div>
 
 			<div class="section download">
-				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
+				<img class="icon light" src="images/package.webp" alt="download" width="48" height="48" />
 				<h2>FileBot for Synology DSM and QNAP QTS </h2>
 				<ul class="list">
 					<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
@@ -88,7 +89,7 @@
 			</div>
 
 			<div class="section download">
-				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
+				<img class="icon light" src="images/package.webp" alt="download" width="48" height="48" />
 				<h2>Release Archives</h2>
 				<ul class="list">
 					<li>All packages are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
