--- a/www.filebot.net/getting-started/index.html
+++ b/www.filebot.net/getting-started/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<img id="fullscreen" src="fullscreen.png" width="16" height="16" />
+		<img id="fullscreen" src="fullscreen.webp" width="16" height="16" />
 		<div id="galleria"></div>
 	</body>
 </html>
