--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width">
 
 	<title>@{application.name} - @{package.synopsis}</title>
-	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="icon" href="favicon.webp" sizes="16x16 32x32" type="image/webp">
+	<link rel="icon" href="favicon.svg" sizes="48x48 192x192" type="image/svg+xml">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="code.css" type="text/css">
@@ -24,7 +25,7 @@
 	<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
 	<script src="index.js"></script>
 
-	
+
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -79,13 +80,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="content">
 			<div class="screenshot screencast light">
 				<a href="getting-started/index.html#rename" title="Getting Started">
-					<img class="play" alt="play" src="images/play.png" width="8" height="8" />
-					<img class="screenshot" alt="Getting Started" src="screenshots/rename.png" width="300" height="219" />
+					<img class="play" alt="play" src="images/play.webp" width="8" height="8" />
+					<img class="screenshot" alt="Getting Started" src="screenshots/rename.webp" width="300" height="219" />
 				</a>
 			</div>
 
 			<div class="section about">
-				<img class="icon light" src="images/information.png" alt="about" width="48" height="48" />
+				<img class="icon light" src="images/information.webp" alt="about" width="48" height="48" />
 				<h2>About</h2>
 				<p><strong>FileBot</strong> is the ultimate tool for renaming and organizing your movies, TV shows and Anime. Match and rename media files against online databases, download artwork and cover images, fetch subtitles, write metadata, and more, all at once in matter of seconds. It's smart and just works.</p>
 			</div>
@@ -103,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 
 			<div class="section first tutorial">
-				<img class="icon light" src="images/navigate.png" alt="start" width="48" height="48" />
+				<img class="icon light" src="images/navigate.webp" alt="start" width="48" height="48" />
 				<h2>Getting Started</h2>
 				<p>
 					<strong>FileBot makes renaming and organizing media files a breeze.</strong> FileBot will automatically match your files with information 
@@ -120,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					manually search and download subtitles, preview subtitles and fix encoding problems.
 				</p>
 				<ol>
-					<li>Drag your movie or episode files onto the <img alt="===" width="15" height="15" src="images/droparea.png" /> drop area</li>
+					<li>Drag your movie or episode files onto the <img alt="===" width="15" height="15" src="images/droparea.webp" /> drop area</li>
 					<li>Hit <span class="label">Download</span></li>
 				</ol>
 				<p>
@@ -136,7 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 
 			<div class="section features" id="features">
-				<img class="icon light" src="images/lists.png" alt="features" width="48" height="48" />
+				<img class="icon light" src="images/lists.webp" alt="features" width="48" height="48" />
 				<span class="quote light">Automatic for the people</span>
 				<h2>Some Features</h2>
 				<ul class="list">
@@ -148,10 +149,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<li>
 						<div class="screenshot light">
 							<a href="getting-started/index.html">
-								<img class="dialog" alt="Rename" style="position: absolute; top: 29px; right: 20px" width="75" height="55" src="screenshots/small/dialog.format.png" />
+								<img class="dialog" alt="Rename" style="position: absolute; top: 29px; right: 20px" width="75" height="55" src="screenshots/small/dialog.format.webp" />
 							</a>
 							<a href="getting-started/index.html">
-								<img class="screenshot" alt="Format Dialog" width="150" height="118" src="screenshots/small/panel.rename.png" />
+								<img class="screenshot" alt="Format Dialog" width="150" height="118" src="screenshots/small/panel.rename.webp" />
 							</a>
 						</div>
 						Rename and move hundreds of files in a matter of seconds
@@ -172,7 +173,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<li>
 						<div class="screenshot light">
 							<a href="getting-started/index.html">
-								<img class="screenshot" alt="Subtitles" width="150" height="118" src="screenshots/small/panel.subtitle.png" />
+								<img class="screenshot" alt="Subtitles" width="150" height="118" src="screenshots/small/panel.subtitle.webp" />
 							</a>
 						</div>
 						Fetch subtitles from <a href="https://www.opensubtitles.org/">OpenSubtitles</a>
@@ -186,7 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<li>
 						<div class="screenshot light">
 							<a href="getting-started/index.html">
-								<img class="screenshot" alt="SFV" width="150" height="118" src="screenshots/small/panel.sfv.png" />
+								<img class="screenshot" alt="SFV" width="150" height="118" src="screenshots/small/panel.sfv.webp" />
 							</a>
 						</div>
 						Compute and verify <a href="https://en.wikipedia.org/wiki/Simple_file_verification">sfv</a>, <a href="https://en.wikipedia.org/wiki/Md5sum">md5</a>, <a href="https://en.wikipedia.org/wiki/Sha1sum">sha1</a> and <a href="https://en.wikipedia.org/wiki/Sha256sum">sha256</a> files
@@ -201,7 +202,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 
 			<div class="section download" id="download">
-				<img class="icon light" src="images/package.png" alt="download" width="48" height="48" />
+				<img class="icon light" src="images/package.webp" alt="download" width="48" height="48" />
 				<span class="quote">Today is the day</span>
 				<h2>Download</h2>
 				<ul class="list">
@@ -226,7 +227,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 
 			<div class="section purchase" id="purchase">
-				<img class="icon light" src="images/purchase.png" alt="download" width="48" height="48" />
+				<img class="icon light" src="images/purchase.webp" alt="download" width="48" height="48" />
 				<span class="quote">We work to better ourselves</span>
 				<h2>Buy a License</h2>
 				<a id="year" href="#!" class="paddle_button light" data-allow-quantity="false" data-referrer="index" data-product="532439">
@@ -249,7 +250,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 
 			<div class="section contact" id="contact">
-				<img class="icon light" src="images/contact.png" alt="contact" width="48" height="48" />
+				<img class="icon light" src="images/contact.webp" alt="contact" width="48" height="48" />
 				<span class="quote">Will you join us?</span>
 				<h2>Contact</h2>
 				<p>
