--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width">
 
 	<title>Buy FileBot License</title>
-	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="icon" href="favicon.webp" sizes="16x16 32x32" type="image/webp">
+	<link rel="icon" href="favicon.svg" sizes="48x48 192x192" type="image/svg+xml">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="purchase.css" type="text/css">
@@ -41,7 +42,7 @@
 
 		<div class="content">
 			<div class="screenshot column light">
-				<img class="screenshot" alt="Paste License Key" src="screenshots/license.png" width="153" height="171" />
+				<img class="screenshot" alt="Paste License Key" src="screenshots/license.webp" width="153" height="171" />
 			</div>
 			<div class="section about">
 				<h2>Buy a License</h2>
