--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -6,7 +6,8 @@
 	<meta name="robots" content="noindex">
 
 	<title>Thank you for purchasing FileBot! 💯</title>
-	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="icon" href="favicon.webp" sizes="16x16 32x32" type="image/webp">
+	<link rel="icon" href="favicon.svg" sizes="48x48 192x192" type="image/svg+xml">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="thanks.css" type="text/css">
 
@@ -71,7 +72,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="content">
 			<div class="screenshot mail">
 				<a href="https://mail.google.com/">
-					<img class="screenshot" alt="You've got Mail!" src="images/mail.png" width="124" height="165" />
+					<img class="screenshot" alt="You've got Mail!" src="images/mail.webp" width="124" height="165" />
 				</a>
 			</div>
 			<div class="section about">
@@ -80,24 +81,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					Your license has been issued and will arrive in your inbox shortly. You will receive <a href="activate.html">2 emails</a>. The first email from <a href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
 				</p>
 				<a class="box" href="https://drive.google.com/">
-					<img alt="Listen!" src="images/information.png" width="48" height="48" />
+					<img alt="Listen!" src="images/information.webp" width="48" height="48" />
 					Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, then you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
 				</a>
 			</div>
 
 			<div class="section tutorial">
-				<img class="icon" src="images/lists.png" alt="start" width="48" height="48" />
+				<img class="icon" src="images/lists.webp" alt="start" width="48" height="48" />
 				<h2>Next Steps</h2>
 				<p>
 					Please <strong>Select &amp; Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <abbr title="-----BEGIN PGP SIGNED MESSAGE-----&#10;⋮&#10;-----BEGIN PGP SIGNATURE-----&#10;⋮&#10;-----END PGP SIGNATURE-----">entire text in the grey area</abbr> in the <strong>License Key</strong> section.
 				</p>
 				<div class="screenshot">
 					<div class="step">1</div>
-					<img class="screenshot" alt="Copy License Key" src="screenshots/license.key.png" width="299" height="323" />
+					<img class="screenshot" alt="Copy License Key" src="screenshots/license.key.webp" width="299" height="323" />
 				</div>
 				<div class="screenshot">
 					<div class="step">2</div>
-					<img class="screenshot" alt="Paste License Key" src="screenshots/license.popup.png" width="224" height="304" />
+					<img class="screenshot" alt="Paste License Key" src="screenshots/license.popup.webp" width="224" height="304" />
 				</div>
 			</div>
 
@@ -106,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</p>
 
 			<div class="section contact">
-				<img class="icon" src="images/contact.png" alt="contact" width="48" height="48" />
+				<img class="icon" src="images/contact.webp" alt="contact" width="48" height="48" />
 				<h2>Contact</h2>
 				<p>
 					If you have received <strong>no email</strong> at all then you have likely <a href="forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a href="forums/viewtopic.php?t=11131">rejecting emails</a>. Please contact <a href="mailto:assist@paddle.com?bcc=license@filebot.net&subject=I%20purchased%20FileBot%20and%20did%20not%20yet%20receive%20my%20license%20key&body=Dear%20Customer%20Support%2C%0D%0A%0D%0AI%20purchased%20FileBot%20and%20did%20not%20yet%20receive%20my%20license%20key.%20I%20may%20have%20entered%20an%20invalid%20email%20address%20during%20checkout.%20Please%20resend%20my%20license%20key%20to%20%3CGoogle%20ID%3E%40gmail.com%20instead.%0D%0A%0D%0APurchase%20Date%3A%20DD-MM-YYYY%0D%0APayment%20Details%3A%20%3Clast%204%20digits%20of%20CC%20number%3E%20or%20%3CPayPal%20%2F%20Apple%20Pay%20Account%20ID%3E%0D%0AEmail%20Address%3A%20%3Cemail%20address%20used%20during%20purchase%3E%0D%0A%0D%0AKind%20Regards%2C%0D%0A%3Cname%3E">assist@paddle.com</a> immediately so they can update their records and resend your License Key to a valid email address.
