--- a/www.filebot.net/eula.html
+++ b/www.filebot.net/eula.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width">
 
 	<title>End User License Agreement - FileBot</title>
-	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="icon" href="favicon.webp" sizes="16x16 32x32" type="image/webp">
+	<link rel="icon" href="favicon.svg" sizes="48x48 192x192" type="image/svg+xml">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="eula.css" type="text/css">
