--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width">
 
 	<title>Scripts and Automation</title>
-	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+	<link rel="icon" href="favicon.webp" sizes="16x16 32x32" type="image/webp">
+	<link rel="icon" href="favicon.svg" sizes="48x48 192x192" type="image/svg+xml">
 	<link rel="stylesheet" href="base.css" type="text/css">
 	<link rel="stylesheet" href="code.css" type="text/css">
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
@@ -38,7 +39,7 @@
 
 		<div class="content">
 			<div class="screenshot column">
-				<a href="https://github.com/filebot/scripts"><img class="screenshot" alt="See Examples" width="330" src="screenshots/script.png" /></a>
+				<a href="https://github.com/filebot/scripts"><img class="screenshot" alt="See Examples" width="330" src="screenshots/script.webp" /></a>
 			</div>
 			<div class="section about column">
 				<h2>About</h2>
