Replace all *.ttf fonts with *.woff2 fonts

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -14,9 +14,9 @@
 	<link rel="stylesheet" href="review.css" type="text/css">
 	<link rel="stylesheet" href="purchase.css" type="text/css">
 
-	<link rel="preload" href="fonts/handwriting.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="fonts/code.ttf" as="font" type="font/ttf" crossorigin>
-	<link rel="preload" href="fonts/icon.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="fonts/handwriting.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/code.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/icon.woff2" as="font" type="font/woff2" crossorigin>
 
 	<link rel="preload" href="nav-a-bg.svg" as="image">
 	<link rel="preload" href="nav-a-bg-h.svg" as="image">
