--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="purchase.css" type="text/css">
 
-	<link rel="preload" href="fonts/icon.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="fonts/icon.woff2" as="font" type="font/woff2" crossorigin>
 
 	<link rel="preload" href="nav-a-bg.svg" as="image">
 	<link rel="preload" href="nav-a-bg-h.svg" as="image">
