--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -751,7 +751,7 @@
 					</tr>
 					<tr id="mediaTitle">
 						<td><kbd class="variable">mediaTitle</kbd></td>
-						<td>embedded media title</td>
+						<td><a href="forums/viewtopic.php?t=2072#embedded-media-title">embedded media title</a></td>
 						<td>Serenity</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
