--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -178,8 +178,8 @@
 					</tr>
 					<tr id="order">
 						<td><kbd class="option">--order</kbd></td>
-						<td>episode numbering</td>
-						<td>Airdate | Absolute | DVD | Date and Title</td>
+						<td><a href="forums/viewtopic.php?t=14356">episode numbering</a></td>
+						<td><a href="forums/viewtopic.php?t=14356">Airdate | Absolute | DVD | Date and Title</a></td>
 					</tr>
 					<tr id="format">
 						<td><kbd class="option">--format</kbd></td>
