--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<span class="quote">Today is the day</span>
 				<h2>Download</h2>
 				<ul class="list">
-					<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
+					<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a> or <a href="@{link.release.prefix}_arm64.msi">@{release}_arm64.msi</a></li>
 					<li>macOS installer: <a href="@{link.release.prefix}_x64.pkg">@{release}_x64.pkg</a> or <a href="@{link.release.prefix}_arm64.pkg">@{release}_arm64.pkg</a></li>
 					<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
 					<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
