--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -38,9 +38,9 @@
 				<img class="icon light" src="images/microsoft.logo.svg" alt="download" width="42" height="42" />
 				<h2>FileBot for Windows</h2>
 				<ul class="list">
-					<li>Windows Installer for x64: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
-					<li>Windows Installer for ARM: <a href="@{link.release.prefix}_arm64.msi">@{release}_arm64.msi</a></li>
-					<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
+					<li>Windows installer for x64: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
+					<li>Windows installer for ARM: <a href="@{link.release.prefix}_arm64.msi">@{release}_arm64.msi</a></li>
+					<li>Windows portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 					<li>Windows packages are available <a href="windows/winget.html">via winget</a> and <a href="windows/scoop.html">via scoop</a></li>
 				</ul>
 			</div>
