Add {sn} to binding docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -179,6 +179,12 @@
 						<td>[1, 2, 3]</td>
 						<td><kbd class="type">Integer*</kbd></td>
 					</tr>
+					<tr id="sn">
+						<td><kbd class="variable">sn</kbd></td>
+						<td>season name</td>
+						<td>Wano Country Arc</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
 					<tr id="sy">
 						<td><kbd class="variable">sy</kbd></td>
 						<td>season years</td>
