Use opensubtitles.com link

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<img class="screenshot" alt="Subtitles" width="150" height="118" src="screenshots/small/panel.subtitle.webp" />
 							</a>
 						</div>
-						Fetch subtitles from <a href="https://www.opensubtitles.org/">OpenSubtitles</a>
+						Fetch subtitles from <a href="https://www.opensubtitles.com/">OpenSubtitles</a>
 					</li>
 					<li>Find perfectly matching subtitles via <a href="forums/viewtopic.php?t=2615">file hash</a></li>
 					<li>Upload subtitles with <a href="forums/viewtopic.php?t=2615">file hash</a></li>
