Update ICU script transliteration link

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -1060,7 +1060,7 @@
 					<small class="comment">(e.g. &quot;カタカナ&quot; ➔ &quot;katakana&quot;)</small>
 				</p>
 				<p id="String.transliterate">
-					<code><kbd class="type">String</kbd>.<kbd class="method">transliterate</kbd>(<kbd class="string">identifier</kbd>)</code>Apply any <a href="https://unicode-org.github.io/icu/userguide/transforms/general/#transliterator-identifiers">ICU script transliteration</a>.
+					<code><kbd class="type">String</kbd>.<kbd class="method">transliterate</kbd>(<kbd class="string">identifier</kbd>)</code>Apply any <a href="forums/viewtopic.php?t=13421">ICU script transliteration</a>.
 					<small class="comment">(e.g. &quot;中国&quot; ➔ &quot;zhōng guó&quot;)</small>
 				</p>
 				<p id="Number.pad">
