--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -1056,7 +1056,7 @@
 				</p>
 				<p id="String.ascii">
 					<code><kbd class="type">String</kbd>.<kbd class="method">ascii</kbd>()</code>
-					Convert Unicode characters to ASCII.
+					<a href="forums/viewtopic.php?t=14564">Convert Unicode characters to ASCII</a>.
 					<small class="comment">(e.g. &quot;カタカナ&quot; ➔ &quot;katakana&quot;)</small>
 				</p>
 				<p id="String.transliterate">
