Add {hdr} docs page

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -559,8 +559,8 @@
 					</tr>
 					<tr id="hdr">
 						<td><kbd class="variable">hdr</kbd></td>
-						<td>high dynamic range</td>
-						<td>HDR</td>
+						<td><a href="forums/viewtopic.php?t=14569">high dynamic range</a></td>
+						<td>HDR10</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr id="dovi">
