Add {hdr} docs page

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -565,7 +565,7 @@
 					</tr>
 					<tr id="dovi">
 						<td><kbd class="variable">dovi</kbd></td>
-						<td>Dolby Vision</td>
+						<td><a href="forums/viewtopic.php?t=14569">Dolby Vision</a></td>
 						<td>Dolby Vision</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
