Rename generic files using custom pattern matching or a custom prompt

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -149,7 +149,7 @@
 				<ul class="list next" id="generic">
 					<li>Rename music using <a href="https://en.wikipedia.org/wiki/ID3">ID3</a> tags or <a href="https://acoustid.org/">AcoustID</a> acoustic fingerprints</li>
 					<li>Rename photos using <a href="https://en.wikipedia.org/wiki/Exif">Exif</a> metadata</li>
-					<li>Rename generic files using <a href="help/generic-files.html">custom pattern matching</a> or a <a href="help/generic-prompt.html">custom prompt</a></li>
+					<li>Rename generic files using <a href="help/generic-files.html">custom pattern matching</a> or a <a href="help/generic-prompt.html">custom GPT prompt</a></li>
 				</ul>
 				<ul class="list next" id="subtitles">
 					<li>
