--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -188,8 +188,8 @@
 				<span class="quote">Today is the day</span>
 				<h2>Download</h2>
 				<ul class="list">
-					<li>Windows installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a> or <a href="@{link.release.prefix}_arm64.msi">@{release}_arm64.msi</a></li>
-					<li>macOS installer: <a href="@{link.release.prefix}_x64.pkg">@{release}_x64.pkg</a> or <a href="@{link.release.prefix}_arm64.pkg">@{release}_arm64.pkg</a></li>
+					<li>Windows installer: <a class="windows-x64" href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a> or <a class="windows-arm64" href="@{link.release.prefix}_arm64.msi">@{release}_arm64.msi</a></li>
+					<li>macOS installer: <a class="macos-x64" href="@{link.release.prefix}_x64.pkg">@{release}_x64.pkg</a> or <a class="macos-arm64" href="@{link.release.prefix}_arm64.pkg">@{release}_arm64.pkg</a></li>
 					<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
 					<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
 					<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a></li>
