--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -24,6 +24,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
 	<script src="index.js"></script>
+	<script src="download.js"></script>
 
 	<meta name="description" content="@{package.description}" />
 	<meta name="keywords" content="@{package.tags}" />
