Add {menu} docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -851,6 +851,12 @@
 						<td>&lt;subtitle streams&gt;</td>
 						<td><kbd class="type">[String:String]*</kbd></td>
 					</tr>
+					<tr id="menu">
+						<td><kbd class="variable">menu</kbd></td>
+						<td><a href="forums/viewtopic.php?t=4285">chapter information</a></td>
+						<td>&lt;chapter information&gt;</td>
+						<td><kbd class="type">[String:String]</kbd></td>
+					</tr>
 					<tr id="image">
 						<td><kbd class="variable">image</kbd></td>
 						<td><a href="forums/viewtopic.php?t=4285">image properties</a></td>
